--- a/style.css
+++ b/style.css
@@ -7,26 +7,61 @@ body {
     margin: 0;
 }
 
-#product {
-    background: orange;
+#product-overview {
+    background: #ff1966;
     width: 100%;
     height: 528px;
-    padding: 20px;
+    padding: 10px;
 }
 
 .section-title {
-    color: rgb(132, 255, 132);
+    color: rgb(100, 255, 100);
     font-family: inherit;
 }
 
-h1 {
-    color: rgb(85, 85, 248);
-    font-family: 'Courier New', Courier, sans-serif;
+#product-overview h1 {
+    color: white;
+    font-family: 'Anton', sans-serif;
 }
 
+/* h1 {
+    color: rgb(85, 85, 248);
+    font-family: 'Courier New', Courier, sans-serif;
+} */
 .main-header {
     width: 100%;
-    background-color: rgb(153, 230, 204);
-    padding: 10px 20px;
+    background: #2ddf5c;
+    padding: 8px 16px;
+}
+
+
+.main-header > div {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.main-nav {
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 74px);
+    vertical-align: middle;
+}
+
+.main-nav__items {
+    margin: 0;
+    padding: 0;
+    list-style: none;
  
+}
+
+.main-header__brand {
+    color: #0e4f1f;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.main-nav__item {
+    display: inline-block;
+    margin: 0 16px;
 }
