--- a/style.css
+++ b/style.css
@@ -8,15 +8,14 @@ body {
 }
 
 #product-overview {
-    background: #ff1966;
+    background: url(freedom.jpg);
     width: 100%;
     height: 528px;
     padding: 10px;
 }
 
 .section-title {
-    color: rgb(100, 255, 100);
-    font-family: inherit;
+    color: #2ddf5c;
 }
 
 #product-overview h1 {
@@ -25,27 +24,25 @@ body {
 }
 
 /* h1 {
-    color: rgb(85, 85, 248);
-    font-family: 'Courier New', Courier, sans-serif;
+    font-family: sans-serif;
 } */
+
 .main-header {
     width: 100%;
-
     background: #2ddf5c;
     padding: 8px 16px;
-}
-
-
-.main-header>div {
-    display: inline-block;
-    vertical-align: middle;
-    background-color: rgb(153, 230, 204);
-    padding: 10px 20px;
 
 }
 
 .main-header>div {
     display: inline-block;
+}
+
+.main-header__brand {
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+
 }
 
 .main-nav {
@@ -53,6 +50,7 @@ body {
     text-align: right;
     width: calc(100% - 74px);
     vertical-align: middle;
+
 }
 
 .main-nav__items {
@@ -62,19 +60,37 @@ body {
 
 }
 
-.main-header__brand {
-    color: #0e4f1f;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 22px;
-}
-
 .main-nav__item {
     display: inline-block;
     margin: 0 16px;
 
 }
 
-.main-nav_item {
-    display: inline-block;
+
+.main-nav__item a {
+    text-decoration: none;
+    color: rgb(0, 68, 0);
+    font-weight: bold;
+    padding: 3px;
+
+}
+
+.main-nav__item a:hover,
+.main-nav__item a:active {
+    color: white;
+    border-bottom: 5px solid white;
+
+}
+.main-nav__item--cta {
+    color: white;
+    background: red;
+    padding: 8px 16px;
+    border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+    color: red;
+    background: white;
+    border: none;
 }
