--- a/shared.css
+++ b/shared.css
@@ -1,3 +1,110 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+}
+
+.main-header {
+    width: 100%;
+    background: #2ddf5c;
+    padding: 8px 16px;
+}
+
+.main-header>div {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.main-header__brand {
+    color: #0e4f1f;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+
+.main-nav {
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 74px);
+    vertical-align: middle;
+
+}
+
+.main-nav__items {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+}
+
+.main-nav__item {
+    display: inline-block;
+    margin: 0 16px;
+
+}
+
+
+.main-nav__item a {
+    text-decoration: none;
+    color: rgb(0, 68, 0);
+    font-weight: bold;
+    padding: 3px;
+
+}
+
+.main-nav__item a:hover,
+.main-nav__item a:active {
+    color: white;
+    border-bottom: 5px solid white;
+}
+
+
+.main-nav__item--cta a {
+    color: white;
+    background: red;
+    padding: 8px 16px;
+    border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+    color: red;
+    background: white;
+    border: none;
+}
+
+.main-footer {
+    background: black;
+    padding: 32px;
+    margin-top: 48px;
+}
+
+.main-footer__links {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.main-footer__link {
+    display: inline-block;
+    margin: 0 16px;
+}
+
+.main-footer__link a {
+    color: white;
+    text-align: none;
+}
+
+.main-footer__link a:hover,
+.main-footer__link a:active {
+    color: rgba(34, 34, 34, 0.8);
+}
+
 .button {
     background: darkgreen;
     color: white;
