--- a/packages/packages.css
+++ b/packages/packages.css
@@ -9,9 +9,59 @@ main {
     border-left: none;
 }
 
+.package:hover, .package:active {
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    border-color: rgb(245, 95, 95);
+}
+
 .package a {
     text-decoration: none;
     color: inherit;
     display: block;
     padding: 32px;
+}
+
+.package__subtitle {
+    color: #979797;
+}
+
+.package__info {
+    padding: 16px;
+    border: 2px solid darkgreen;
+    font-size: 20px;
+    color: darkgreen;
+    background: white;
+}
+
+.clearfix {
+    clear: both;
+}
+
+#plus {
+    background: rgba(213, 255, 220, 0.95);
+}
+
+#free {
+    background: rgba(234, 252, 237, 0.95);
+    float: right;
+    border-right: none;
+    border-left: 4px solid darkgreen;
+    text-align: right;
+
+}
+
+#free:hover, #free:active {
+    border-left-color: rgb(245, 95, 95);
+}
+
+#premium {
+    background: rgba(14, 79, 31, 0.95);
+}
+
+#premium .package__title {
+    color: white;
+}
+
+#premium .package__subtitle {
+    color: #bbb;
 }
