broken product page

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -2,11 +2,12 @@ main {
     padding-top: 32px;
 }
 
-.package {
-    width: 80%;
-    margin: 16px 0;
-    border: 4px solid darkgreen;
-    border-left: none;
+.background {
+    background: url("../images/plans-background.jpg");
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1
 }
 
 .package:hover, .package:active {
