--- a/shared.css
+++ b/shared.css
@@ -1,7 +1,6 @@
 * {
     box-sizing: border-box;
 }
-
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -11,6 +10,9 @@ body {
     width: 100%;
     background: #2ddf5c;
     padding: 8px 16px;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .main-header>div {
