--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 #product-overview {
-    background: url(freedom.jpg);
+    background-image:url("freedom.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
     width: 100%;
     height: 528px;
     padding: 10px;
+    margin-top: 43px;
+    position: relative;
 }
 
 .section-title {
@@ -13,6 +17,9 @@
 #product-overview h1 {
     color: white;
     font-family: 'Anton', sans-serif;
+    position: absolute;
+    bottom: 5%;
+    left: 3%;
 }
 
 .plan__list {
