--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
 
 
 #product-overview {
-    background-image:url("freedom.jpg");
-    background-size: cover;
-    background-position: left 10% bottom 20%;
-    background-repeat: no-repeat;
-    background-origin: border-box;
-    background-clip: border-box;
+    background:  url("freedom.jpg") left 20% bottom 20%/cover no-repeat border-box; /*all bgimg properties in one line */
     width: 100%;
     height: 528px;
     padding: 10px;
