--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
-
-
 #product-overview {
-    background:  url("freedom.jpg") left 20% bottom 20%/cover no-repeat border-box; /*all bgimg properties in one line */
+    background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent), 
+    url("images/freedom.jpg") left 10% bottom 20%/cover no-repeat border-box;
+    /*all bgimg properties in one line */
     width: 100%;
     height: 528px;
     padding: 10px;
     margin-top: 43px;
     border: 5px dashed red;
     position: relative;
+
 }
 
 .section-title {
