--- a/packages/packages.css
+++ b/packages/packages.css
@@ -3,13 +3,18 @@ main {
 }
 
 .background {
-    background: url("../images/plans-background.jpg");
+    background: url("../images/plans-background.jpg") center/cover;
+    filter: grayscale(10%);
     width: 100%;
     height: 100%;
     position: fixed;
     z-index: -1
 }
 
+.package{
+    width: 80%;
+    
+}
 .package:hover, .package:active {
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     border-color: rgb(245, 95, 95);
