--- a/shared.css
+++ b/shared.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
 }
+
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -8,14 +9,15 @@ body {
 
 .main-header {
     width: 100%;
-    background: #2ddf5c;
-    padding: 8px 16px;
     position: fixed;
     top: 0;
     left: 0;
+    background: #2ddf5c;
+    padding: 8px 16px;
+    z-index: 1;
 }
 
-.main-header>div {
+.main-header > div {
     display: inline-block;
     vertical-align: middle;
 }
@@ -25,12 +27,14 @@ body {
     text-decoration: none;
     font-weight: bold;
     font-size: 22px;
-    height: 22px; /*styling image*/
-    display: inline-block; /*styling image*/
+    height: 22px;
+    /* width: 20px; */
+    display: inline-block;
 }
 
-.main-header_brand img {
-    height: 100%; /*styling image*/
+.main-header__brand img {
+    height: 100%;
+    /* width: 100%; */
 }
 
 .main-nav {
@@ -38,29 +42,24 @@ body {
     text-align: right;
     width: calc(100% - 74px);
     vertical-align: middle;
-
 }
 
 .main-nav__items {
     margin: 0;
     padding: 0;
     list-style: none;
-
 }
 
 .main-nav__item {
     display: inline-block;
     margin: 0 16px;
-
 }
-
 
 .main-nav__item a {
     text-decoration: none;
-    color: rgb(0, 68, 0);
+    color: #0e4f1f;
     font-weight: bold;
-    padding: 3px;
-
+    padding: 3px 0;
 }
 
 .main-nav__item a:hover,
@@ -69,17 +68,16 @@ body {
     border-bottom: 5px solid white;
 }
 
-
 .main-nav__item--cta a {
     color: white;
-    background: red;
+    background: #ff1b68;
     padding: 8px 16px;
     border-radius: 8px;
 }
 
 .main-nav__item--cta a:hover,
 .main-nav__item--cta a:active {
-    color: red;
+    color: #ff1b68;
     background: white;
     border: none;
 }
@@ -104,28 +102,29 @@ body {
 
 .main-footer__link a {
     color: white;
-    text-align: none;
+    text-decoration: none;
 }
 
 .main-footer__link a:hover,
 .main-footer__link a:active {
-    color: rgba(34, 34, 34, 0.8);
+    color: #ccc;
 }
 
 .button {
-    background: darkgreen;
+    background: #0e4f1f;
     color: white;
     font: inherit;
-    border: 1.5px solid darkgreen;
+    border: 1.5px solid #0e4f1f;
     padding: 8px;
     border-radius: 8px;
     font-weight: bold;
     cursor: pointer;
 }
 
-.button:hover, .button:active {
+.button:hover,
+.button:active {
     background: white;
-    color: darkgreen;
+    color: #0e4f1f;
 }
 
 .button:focus {
