--- a/shared.css
+++ b/shared.css
@@ -7,6 +7,14 @@ body {
     margin: 0;
 }
 
+.backdrop {
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+
 .main-header {
     width: 100%;
     position: fixed;
@@ -17,7 +25,7 @@ body {
     z-index: 1;
 }
 
-.main-header > div {
+.main-header>div {
     display: inline-block;
     vertical-align: middle;
 }
