--- a/shared.css
+++ b/shared.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:100i,400,900');
+@import url('https://fonts.googleapis.com/css2?family=Anton');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:400,700');
+
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", "Verdana", sans-serif;
   margin: 0;
 }
 
@@ -212,10 +216,10 @@ main {
 }
 
 .button[disabled] {
-  background: #ccc;
-  color: white;
-  border: 1.5px solid #ccc;
   cursor: not-allowed;
+  border: #a1a1a1;
+  background: #ccc;
+  color: #a1a1a1;
 }
 
 .open {
