--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: "Anonymous Pro";
+    src: url("AnonymousPro-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Anonymous Pro";
+    src: url("AnonymousPro-Bold.ttf");
+}
+
 main {
     padding-top: 2rem;
 }
@@ -21,7 +31,7 @@ main {
 
 .package:hover,
 .package:active {
-    box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     border-color: #ff5454;
     /* border-color: #ff5454 !important; */
 }
@@ -54,6 +64,7 @@ main {
     font-size: 1.2rem;
     color: #0e4f1f;
     background: white;
+    font-family: "Anonymous Pro", monospace;
 }
 
 .clearfix {
@@ -91,23 +102,23 @@ main {
 
 @media (min-width: 40rem) {
     main {
-      max-width: 1500px;
-      margin-left: auto;
-      margin-right: auto;
+        max-width: 1500px;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
 @media (min-width: 1500px) {
     .package {
-      border-left: 4px solid #0e4f1f;
+        border-left: 4px solid #0e4f1f;
     }
 
     #free {
-      border-right: 4px solid #0e4f1f;
+        border-right: 4px solid #0e4f1f;
     }
 
     #free:hover,
     #free:active {
-      border-right-color: #ff5454;
+        border-right-color: #ff5454;
     }
 }
