--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,11 +1,12 @@
 @font-face {
     font-family: "Anonymous Pro";
-    src: url("AnonymousPro-Regular.ttf");
+    src: url("AnonymousPro-Regular.ttf") format("truetype");
 }
 
 @font-face {
     font-family: "Anonymous Pro";
-    src: url("AnonymousPro-Bold.ttf");
+    src: url("AnonymousPro-Bold.ttf") format("truetype");
+    font-weight: 700;
 }
 
 main {
@@ -65,6 +66,8 @@ main {
     color: #0e4f1f;
     background: white;
     font-family: "Anonymous Pro", monospace;
+    font-weight: 700;
+    line-height: 2;
 }
 
 .clearfix {
