--- a/customers/customers.css
+++ b/customers/customers.css
@@ -6,15 +6,24 @@ main {
   font-size: 1.2rem;
 }
 
+/*.testimonial__list {
+    width: 80%;
+    margin: auto;
+  }*/
+
 .testimonial__image-container {
   width: 100%;
   max-width: 40rem;
   box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
+  transform: skew(20deg);
+  overflow: hidden;
 }
 
 .testimonial__image {
   width: 100%;
   vertical-align: top;
+  transform: skew(-20deg) scale(1.4);
+
 }
 
 .testimonial__info {
@@ -72,5 +81,4 @@ main {
   .testimonial__info {
     width: 30%;
   }
-
 }
