--- a/main.css
+++ b/main.css
@@ -109,7 +109,7 @@
   .plan--highlighted {
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
     height: 30rem;
-    z-index: 100;
+    z-index: 50;
   }
 }
 
@@ -157,13 +157,18 @@
   .key-feature__list {
     display: flex;
     justify-content: center;
-    align-items: center;
   }
 }
 
+/* h1 {
+    font-family: sans-serif;
+} */
+
 .modal {
   position: fixed;
-  display: none;
+  opacity: 0;
+  transform: translateY(-3rem);
+  transition: opacity 200ms ease-out, transform 500ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
   z-index: 200;
   top: 20%;
   left: 30%;
