--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: "Anonymous Pro";
-    src: url("AnonymousPro-Regular.ttf") format("truetype");
+    font-family: "AnonymousPro";
+        src: url("anonymousPro-Regular.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: "Anonymous Pro";
-    src: url("AnonymousPro-Bold.ttf") format("truetype");
+    font-family: "AnonymousPro";
+        src: url("anonymousPro-Bold.ttf");
     font-weight: 700;
 }
 
@@ -28,6 +28,7 @@ main {
     border: 4px solid #0e4f1f;
     border-left: none;
     position: relative;
+    overflow: hidden;
 }
 
 .package:hover,
@@ -53,6 +54,10 @@ main {
     color: white;
     background: #ff5454;
     padding: 0.5rem;
+    transform: rotate(45deg) translateX(3.5rem) translateY(-2rem);
+    transform-origin: center;
+    width: 12rem;
+    text-align: center;
 }
 
 .package__subtitle {
@@ -65,6 +70,7 @@ main {
     color: #0e4f1f;
     background: white;
     font-size: 1.2rem;
+    /* font-style font-variant font-weight font-size/line-height font-family*/
 }
 
 .clearfix {
