--- a/shared.css
+++ b/shared.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:400,900');
-@import url('https://fonts.googleapis.com/css2?family=Anton');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:400,900');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,400,900');
+@import url('https://fonts.googleapis.com/css?family=Anton');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
 * {
   box-sizing: border-box;
@@ -14,18 +14,21 @@ body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
   display: grid;
-  grid-template-rows: 3.5rem auto fit-content;
+  grid-template-rows: 3.5rem auto fit-content(8rem);
   grid-template-areas: "header"
     "main"
     "footer";
+  /* padding-top: 3.5rem; */
   height: 100%;
 }
 
 main {
+  /* grid-row: 2 / 3; */
   grid-area: main;
 }
 
 .backdrop {
+  display: none;
   position: fixed;
   display: none;
   top: 0;
@@ -34,6 +37,7 @@ main {
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.2s linear;
 }
 
 .main-header {
@@ -43,7 +47,7 @@ main {
   left: 0;
   background: #2ddf5c;
   padding: 0.5rem 1rem;
-  z-index: 110;
+  z-index: 60;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -75,6 +79,7 @@ main {
   color: #0e4f1f;
   text-decoration: none;
   font-weight: bold;
+  /* width: 20px; */
 }
 
 .main-header__brand img {
@@ -231,6 +236,8 @@ main {
 
 .open {
   display: block !important;
+  opacity: 1 !important;
+  transform: translateY(0) !important;
 }
 
 @media (min-width: 40rem) {
