Add animation % variables

--- a/shared.css
+++ b/shared.css
@@ -2,6 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Anton');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
+:root {
+  --color-primary: #0e4f1f;
+  --color-secondary: #ff1b68;
+  --color-accent: #2ddf5c;
+  --color-light: #fff;
+  --color-dark: #000;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -76,7 +84,7 @@ main {
 }
 
 .main-header__brand {
-  color: #0e4f1f;
+  color: var(--color-primary);
   text-decoration: none;
   font-weight: bold;
   /* width: 20px; */
@@ -106,7 +114,7 @@ main {
 .main-nav__item a,
 .mobile-nav__item a {
   text-decoration: none;
-  color: #0e4f1f;
+  color: var(--color-primary);
   font-weight: bold;
   padding: 0.2rem 0;
 }
@@ -117,10 +125,14 @@ main {
   border-bottom: 5px solid white;
 }
 
+.main-nav__item--cta {
+  animation: wiggle 400ms 3s 8 ease-out none;
+}
+
 .main-nav__item--cta a,
 .mobile-nav__item--cta a {
   color: white;
-  background: #ff1b68;
+  background: var(--color-secondary);
   padding: 0.5rem 1rem;
   border-radius: 8px;
 }
@@ -129,7 +141,7 @@ main {
 .main-nav__item--cta a:active,
 .mobile-nav__item--cta a:hover,
 .mobile-nav__item--cta a:active {
-  color: #ff1b68;
+  color: var(--color-secondary);
   background: white;
   border: none;
 }
@@ -207,10 +219,10 @@ main {
 }
 
 .button {
-  background: #0e4f1f;
+  background: var(--color-primary, #0e4f1f);
   color: white;
   font: inherit;
-  border: 1.5px solid #0e4f1f;
+  border: 1.5px solid var(--color-primary);
   padding: 0.5rem;
   border-radius: 8px;
   font-weight: bold;
@@ -220,7 +232,7 @@ main {
 .button:hover,
 .button:active {
   background: white;
-  color: #0e4f1f;
+  color: var(--color-primary);
 }
 
 .button:focus {
@@ -248,5 +260,19 @@ main {
   .main-footer__links {
     flex-direction: row;
     justify-content: center;
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    transform: rotateZ(0deg);
+  }
+
+  50% {
+    transform: rotateZ(-10deg);
+  }
+
+  100% {
+    transform: rotateZ(10deg);
   }
 }
