--- a/shared.css
+++ b/shared.css
@@ -21,13 +21,22 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   margin: 0;
-  display: grid;
-  grid-template-rows: 3.5rem auto fit-content(8rem);
-  grid-template-areas: "header"
-    "main"
-    "footer";
-  /* padding-top: 3.5rem; */
   height: 100%;
+  padding-top: 3.5rem;
+}
+
+@supports (display: grid) {
+  body {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: 3.5rem auto fit-content(8rem);
+    grid-template-rows: 3.5rem auto fit-content(8rem);
+    grid-template-areas: "header"
+      "main"
+      "footer";
+    padding-top: 0;
+    height: 100%;
+  }
 }
 
 main {
@@ -45,6 +54,7 @@ main {
   width: 100vw;
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
+  -webkit-transition: opacity 0.2s linear;
   transition: opacity 0.2s linear;
 }
 
@@ -56,8 +66,14 @@ main {
   background: #2ddf5c;
   padding: 0.5rem 1rem;
   z-index: 60;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -104,6 +120,8 @@ main {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -126,6 +144,7 @@ main {
 }
 
 .main-nav__item--cta {
+  -webkit-animation: wiggle 400ms 3s 8 ease-out none;
   animation: wiggle 400ms 3s 8 ease-out none;
 }
 
@@ -152,6 +171,8 @@ main {
   }
 
   .main-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
 }
@@ -168,8 +189,15 @@ main {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -204,9 +232,18 @@ main {
   list-style: none;
   margin: 0 auto;
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -249,6 +286,7 @@ main {
 .open {
   display: block !important;
   opacity: 1 !important;
+  -webkit-transform: translateY(0) !important;
   transform: translateY(0) !important;
 }
 
@@ -258,21 +296,46 @@ main {
   }
 
   .main-footer__links {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+  }
+}
+
+@-webkit-keyframes wiggle {
+  0% {
+    -webkit-transform: rotateZ(0deg);
+    transform: rotateZ(0deg);
+  }
+
+  50% {
+    -webkit-transform: rotateZ(-10deg);
+    transform: rotateZ(-10deg);
+  }
+
+  100% {
+    -webkit-transform: rotateZ(10deg);
+    transform: rotateZ(10deg);
   }
 }
 
 @keyframes wiggle {
   0% {
+    -webkit-transform: rotateZ(0deg);
     transform: rotateZ(0deg);
   }
 
   50% {
+    -webkit-transform: rotateZ(-10deg);
     transform: rotateZ(-10deg);
   }
 
   100% {
+    -webkit-transform: rotateZ(10deg);
     transform: rotateZ(10deg);
   }
 }
